--- a/jaksim_ios/Member/MemberStoryboard.storyboard
+++ b/jaksim_ios/Member/MemberStoryboard.storyboard
@@ -302,7 +302,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nq9-Wn-fAi">
-                                <rect key="frame" x="67.5" y="380.5" width="279" height="135"/>
+                                <rect key="frame" x="67.5" y="380" width="279" height="136"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Wnb-6W-eqH">
                                         <rect key="frame" x="0.0" y="20" width="279" height="49"/>
@@ -329,22 +329,22 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3T-VB-VmU">
-                                        <rect key="frame" x="0.0" y="86" width="279" height="49"/>
+                                        <rect key="frame" x="0.0" y="86" width="279" height="50"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2tK-5T-DRy">
-                                                <rect key="frame" x="0.0" y="0.0" width="139.5" height="49"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="139.5" height="50"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="취소"/>
                                             </button>
                                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gtr-3J-bU8">
-                                                <rect key="frame" x="139.5" y="0.0" width="1" height="49"/>
+                                                <rect key="frame" x="139.5" y="0.0" width="1" height="50"/>
                                                 <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="1" id="UZb-l1-4Yf"/>
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H3S-Bi-2oK">
-                                                <rect key="frame" x="140.5" y="0.0" width="138.5" height="49"/>
+                                                <rect key="frame" x="140.5" y="0.0" width="138.5" height="50"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="확인"/>
                                             </button>
@@ -356,7 +356,6 @@
                                     <constraint firstItem="Wnb-6W-eqH" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="12h-CC-SeF"/>
                                     <constraint firstAttribute="trailing" secondItem="Wnb-6W-eqH" secondAttribute="trailing" id="8xM-Tm-JOt"/>
                                     <constraint firstItem="dhr-2k-YRK" firstAttribute="top" secondItem="Wnb-6W-eqH" secondAttribute="bottom" constant="16" id="As7-bS-aDC"/>
-                                    <constraint firstAttribute="height" constant="135" id="Bvr-R6-WF0"/>
                                     <constraint firstAttribute="width" constant="279" id="QOY-T8-nSa"/>
                                     <constraint firstItem="dhr-2k-YRK" firstAttribute="leading" secondItem="nq9-Wn-fAi" secondAttribute="leading" id="azi-jC-Py0"/>
                                     <constraint firstAttribute="bottom" secondItem="y3T-VB-VmU" secondAttribute="bottom" id="rCH-AB-vZw"/>
@@ -375,10 +374,15 @@
                             <constraint firstItem="nq9-Wn-fAi" firstAttribute="centerX" secondItem="Rhn-ML-nXH" secondAttribute="centerX" id="v8O-eU-dca"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="contentLabel" destination="UhP-7g-DzC" id="jZf-nl-UNg"/>
+                        <outlet property="contentView" destination="nq9-Wn-fAi" id="QKw-d6-1xz"/>
+                        <outlet property="titleLabel" destination="2FV-mq-RIX" id="b8B-gd-IME"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="osL-2d-bpx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="756.52173913043487" y="79.6875"/>
+            <point key="canvasLocation" x="738" y="78"/>
         </scene>
     </scenes>
     <resources>
