--- a/jaksim_ios/MeetingList/View/SearchTermsCollectionViewCell/SearchTermsCollectionViewCell.xib
+++ b/jaksim_ios/MeetingList/View/SearchTermsCollectionViewCell/SearchTermsCollectionViewCell.xib
@@ -22,7 +22,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="io3-Ee-h12">
                                 <rect key="frame" x="0.0" y="0.0" width="49" height="36"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="공부"/>
+                                <state key="normal" title="공부">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
