--- a/jaksim_ios/MeetingList/View/EntranceInfoView/EntranceInfoView.xib
+++ b/jaksim_ios/MeetingList/View/EntranceInfoView/EntranceInfoView.xib
@@ -9,11 +9,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EntranceInfoView" customModule="jaksim_ios" customModuleProvider="target">
             <connections>
                 <outlet property="descriptionLabel" destination="lL4-5f-BwH" id="J9R-8v-oY5"/>
-                <outlet property="hashtagContainerView" destination="F0S-WH-PkL" id="mls-hz-ce6"/>
-                <outlet property="hashtagLabel" destination="OB7-lA-fW6" id="XLw-DO-iUB"/>
                 <outlet property="nicknameLabel" destination="A3o-q7-Oc2" id="BgO-aI-ZGh"/>
                 <outlet property="numberOfPeopleLabel" destination="Qke-1H-ybj" id="HO0-kf-1hO"/>
                 <outlet property="profileImageView" destination="D7w-vD-qkk" id="2oG-Bb-Xlf"/>
+                <outlet property="tagContainerView" destination="F0S-WH-PkL" id="mls-hz-ce6"/>
+                <outlet property="tagLabel" destination="OB7-lA-fW6" id="XLw-DO-iUB"/>
                 <outlet property="titleLabel" destination="Ddu-0O-3iJ" id="GvY-19-Y30"/>
             </connections>
         </placeholder>
@@ -26,10 +26,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="335" height="106"/>
                     <subviews>
                         <view alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F0S-WH-PkL">
-                            <rect key="frame" x="0.0" y="0.0" width="149" height="36.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="238.5" height="36.5"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하루 / 5시간 / 공부" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OB7-lA-fW6">
-                                    <rect key="frame" x="8" y="1" width="133" height="33.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{주기} / {수치}{단위} / {카테고리}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OB7-lA-fW6">
+                                    <rect key="frame" x="8" y="1" width="222.5" height="33.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -58,7 +58,7 @@
                     </subviews>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="d0O-lE-2JK">
-                    <rect key="frame" x="0.0" y="126" width="136.5" height="41"/>
+                    <rect key="frame" x="0.0" y="126" width="209.5" height="41"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tmpProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="D7w-vD-qkk">
                             <rect key="frame" x="0.0" y="0.5" width="40" height="40"/>
@@ -68,16 +68,16 @@
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="DVy-de-Rq1">
-                            <rect key="frame" x="48" y="0.0" width="88.5" height="41"/>
+                            <rect key="frame" x="48" y="0.0" width="161.5" height="41"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="닉네임입니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A3o-q7-Oc2">
-                                    <rect key="frame" x="0.0" y="0.0" width="88.5" height="20.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="161.5" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/16명" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qke-1H-ybj">
-                                    <rect key="frame" x="0.0" y="20.5" width="88.5" height="20.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{현재인원}/{최대인원}명" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qke-1H-ybj">
+                                    <rect key="frame" x="0.0" y="20.5" width="161.5" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
